fixed mobile issues

--- a/backgroundsource.html
+++ b/backgroundsource.html
@@ -207,7 +207,8 @@
 
     function goBack() {
         localStorage.removeItem('cc-bg-ratio-filter');
-        location.href = 'create.html';
+        const isMobile = localStorage.getItem('cc-device-mode') === 'mobile';
+        location.href = isMobile ? 'create-mobile.html' : 'create.html';
     }
 
     // ── Colors ──
