--- a/create.html
+++ b/create.html
@@ -1331,7 +1331,7 @@
                 <!-- ── Sprites panel ── -->
                 <div class="sp-content" id="sp-sprites">
                     <div class="sp-header">
-                        🎭 Sprites
+                        Sprites
                         <span class="sp-close-btn" onclick="toggleSidePanel('sprites')">✕</span>
                     </div>
                     <input class="sp-search" id="sb-sprite-search" placeholder="Search sprites..." oninput="filterSidebarSprites()">
@@ -4174,6 +4174,9 @@
         <button onclick="confirmBubblePicker()" style="width:100%;padding:13px;background:var(--accent);color:#000;border:none;border-radius:12px;font-weight:900;font-size:14px;cursor:pointer;">Add Bubble ↵</button>
     </div>
 </div>
+
+<!-- ── Export Modal ── -->
+<div id="export-modal" class="overlay-full">
     <div class="modal-content">
         <h2 style="margin-top:0; color:var(--teal);">Export Comic</h2>
 
